# helix-trial

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  docker-trial.sh  docker_trial_entrypoint.py  pyproject.toml  requirements.txt  run_helix_trial.py
data/partner_test_corpus/: flat_test.jsonl  otel_test.jsonl
epl/: __init__.py  beta_gate.py  logging_utils.py  version.py  version_history.py
epl/analysis/: __init__.py  board_agent.py  dashboard.py  design_agent.py  plots.py
epl/traces/: __init__.py  archive.py  benchmark.py  codec.py  corpus.py  enterprise_runtime.py  extensions.py  fit_scoring.py  fixtures.py  package.py  partner_trial.py  preview.py  projection.py  public_trial.py  report_branding.py  schema.py  scorecard.py  streaming.py  trace_data_policy.json  trial_box.py  tuning.py  verify.py
examples/: langfuse_test.jsonl
