[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-trial-community"
version = "1.0.0"
description = "Open source Helix trial CLI for local trace evaluation."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Trace Integrity"}]
dependencies = [
  "matplotlib>=3.8",
  "opentelemetry-sdk>=1.40"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
helix-trial = "epl.traces.public_trial:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.setuptools.packages.find]
include = ["epl*"]
